# conf

./: .gitignore
c++/: CMakeLists.txt  main.cpp
c++/include/: site.hpp
conf/linux/: change  install
conf/terminal/: bashrc  colours  nanorc-v2  sqliterc
conf/vscode/: colours  extensions  keybindings.json  settings.json
linux/: apt-install
notes/: sqlite3.md
notes/c++/src/: site.cpp
notes/daemon/: daemon.py  steps.txt  watch.py
notes/demo-rabbitmq/: README.md  consumer.py  docker-compose.yml  file_generator.py  file_watcher.py  publisher.py  queue_config.py  requirements.txt  worker.py
notes/demo-rabbitmq/processed/: demo_10.txt  demo_100.txt  demo_11.txt  demo_12.txt  demo_13.txt  demo_14.txt  demo_15.txt  demo_16.txt  demo_17.txt  demo_18.txt  demo_19.txt  demo_20.txt  demo_21.txt  demo_22.txt  demo_23.txt  demo_24.txt  demo_25.txt  demo_26.txt  demo_27.txt  demo_28.txt  demo_29.txt  demo_30.txt  demo_31.txt  demo_32.txt  demo_33.txt  demo_34.txt  demo_35.txt  demo_36.txt  demo_37.txt  demo_38.txt  demo_39.txt  demo_4.txt  demo_40.txt  demo_41.txt  (+63 more)
notes/help-scripts/: find_common_yara_traits.py  hello.gpg  pull_ff_only.sh
notes/misc/: gen_testdata.py  scan_ips.py  testfile.txt.enc  x.7z  y.7z
notes/puppet-lab/: cmds.txt
notes/pydemos/typer-demo/: config.ini  pyproject.toml
notes/pydemos/typer-demo/src/tydo/: __init__.py  __main__.py  cli.py  config.py  database.py  tydo.py
notes/sqlite/: my_db  users_db.py
terminal/: bashrc-edits  nanorc-edits  nanorc-edits-v2  tmux.conf-edits
vscode/: extensions.txt  keybindings.json  settings.json
(+17 files in other folders)
